--- a/style.css
+++ b/style.css
@@ -110,3 +110,37 @@ canvas {
   z-index: -1;
   pointer-events: none;
 }
+nav {
+  background-color: #dcedc8;
+}
+nav a {
+  float: left;
+  display: block;
+}
+nav a:hover {
+  background-color: #8bc34a;
+}
+nav a.active {
+  background-color: #8bc34a;
+  color: #fff;
+}
+nav .search-box {
+  float: right;
+}
+nav input[type=text] {
+  padding: 5px;
+  margin-top: 7px;
+  border: none;
+}
+nav .search-box button {
+  float: right;
+  padding: 5px;
+  margin-top: 7px;
+  margin-right: 15px;
+  background: #8bc34a;
+  border: none;
+  cursor: pointer;
+}
+nav .search-box button:hover {
+  background: #bdbdbd;
+}
